--- a/css/styles.css
+++ b/css/styles.css
@@ -6,76 +6,13 @@
 
 /*header ----------------------------------*/
 
-header nav{
-    display: flex;
-    padding: 10px;
-    align-items: center;
-    justify-content: space-between;
-    border: rgb(220, 217, 217) solid;
-    z-index: 100;
-}
-
 .logo img{
-    display: block;
     width: 7rem;
-    margin-left: 30%;
-}
-nav ul{
-    display: flex;
-    list-style: none;
-    margin-right: 6%;
-}
-
-nav ul a{
-    text-decoration: none;
-    color: black;
-    letter-spacing: 1.2;
-    font-size: 1rem;
-    font-family: 'Roboto', sans-serif;
-    padding-inline: 7px;
-}
-nav ul a:hover{
-    background-color: rgb(88, 15, 190);
-    padding: 5px;
-    color: white;
-}
-
-.separation{
-    color: black;
-}
-ul ul{
-    display: none;
-    position: absolute;
-    z-index: 100
-}
-ul ul li a{
-    color: white;
-}
-
-ul li:hover ul{
-    display: block;
-    background-color: rgb(111, 20, 237);
-    font-family: 'Roboto', sans-serif;
-    padding: 0.7%;
-    width: max-content;
-}
-
-.checkbtn{
-    font-size: 30px;
-    color: white;
-    position: fixed;
-    right: 2%;
-    cursor: pointer;
-    display: none;
-    padding: 2%;
-    background-color: rgb(111, 20, 237);
-}
-#check{
-    display: none;
 }
 
 
 /*main ------------------------------------*/
+
 .container {
     display: grid;
     margin: auto;
@@ -331,7 +268,6 @@ h3{
 .button2:hover{
     background-color: black;
 }
-
 /*footer-------------------------------*/
 
 /** Social media icons footer**/
@@ -441,132 +377,7 @@ form p{
 
 /*landing recipes*/
 
-.mainR{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat (3, auto);
-    grid-template-areas:
-    "block1 block2"
-    "block3 block4"
-    "block5 block6";
-    gap: 20px;
-    margin: 20px;
-}
-.block1{
-    background-color: #019980;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.allRecipes{
-    color: white;
-    font-family:'Roboto', sans-serif;
-    padding: 20px;
-}
-.allRecipes:hover{
-    color: rgb(111, 20, 237);
-}
-.block2,.block3,.block6{
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: ;
-    padding: 10px;
-}
-.block2inside{
-    width: 50%;
-    border: grey 0.5px dotted;
-    box-shadow: 3px 3px 3px rgb(203, 203, 203);
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-}
-.block2inside img{
-    width: 200px;
-}
-.block2inside h2{
-     padding: 10px;
-}
-.block3inside{
-    width: 50%;
-    border: grey 0.5px dotted;
-    box-shadow: 3px 3px 3px rgb(203, 203, 203);
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-}
-.block3inside img{
-    width: 200px;
-}
-.block3inside h2{
-     padding: 10px;
-}
-.block6inside{
-    width: 50%;
-    border: grey 0.5px dotted;
-    box-shadow: 3px 3px 3px rgb(203, 203, 203);
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-}
-.block6inside img{
-    width: 200px;
-}
-.block6inside h2{
-     padding: 10px;
-}
-.infoProtein{
-    background-color: rgb(250, 225, 117);
-    text-align: center;
-    margin: 5px;
-}
-.infoFat{
-    background-color: rgb(249, 152, 249);
-    text-align: center;
-    margin: 5px;
-}
-.infoCarbs{
-    background-color: rgb(127, 245, 223);
-    text-align: center;
-    margin: 5px;
-}
-.infoRecipes{
-    width: 95%;
-}
-.block4{
-    background-color: #019980;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.block5{
-    background-color: #019980;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.hiddenR{
-    display: none;
-}
-.allRecipesResponsive{
-    display: none;
-}
+
 
 /*landing nutritional information*/
 
@@ -767,9 +578,6 @@ form p{
         display: flex;
         flex-direction: column;
     }
-    .block1,.block2,.block3,.block4,.block5,.block6{
-        height: 300px;
-    }
     .info1{
         display: block;
     }
@@ -787,33 +595,15 @@ form p{
     .fats{
         display: block;
     }
-    .block2inside{
-        width: 90%;
-    }
-    .block2inside img{
-        width: 100px;
-    }
-    .infoRecipes{
-        display: flex;
-    }
-    .block3inside{
-        width: 90%;
-    }
-    .block3inside img{
-        width: 100px;
-    }
-    .block6inside{
-        width: 90%;
-    }
-    .block6inside img{
-        width: 100px;
-    }
     .resultList{
         position: relative;
         left: auto;
         top: auto;
         background-color: white;
         text-align: start;
+    }
+    .row__recipes{
+        display: block;
     }
 
 }
@@ -845,71 +635,6 @@ form p{
         text-align: center;
         padding: 20px;
         font-weight: normal;
-    }
-    .mainR{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat (6, auto);
-        grid-template-areas:
-        "block1"
-        "block2"
-        "block4"
-        "block3"
-        "block5" 
-        "block6";
-        gap: 10px;
-        margin: 10px;
-    }
-    .block1{order:1}
-    .block2{order:2}
-    .block4{order:3}
-    .block3{order:4}
-    .block5{order:5}
-    .block6{order:6}
-    .block1,.block4,.block5{
-        height: 50px;
-    }
-    .block1 img{
-        display: none;
-    }
-    .block4 img{
-        display: none;
-    }
-    .block5 img{
-        display: none;
-    }
-    .hiddenR{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-    }
-    .nutriInfo{
-        margin: 3%;
-    }
-    .nutriInfo h1{
-        margin: 3%;
-    }
-    .info1{
-        display: block;
-    }
-    .info1 img{
-        width: 80%;
-    }
-    .allRecipes{
-        display: none;
-    }
-    .allRecipesResponsive{
-        display: block;
-        font-family: 'Roboto', sans-serif;
-        margin: 10px;
-        color: black;
-    }
-    .allRecipesResponsive:hover{
-        color: rgb(111, 20, 237);
-    }
-    .block2,.block3,.block6{
-        display: flex;
-        flex-direction: column;
     }
     .calculator{
         display: flex;
